--- a/PAUP_/Views/Account/ConfirmEmail.cshtml
+++ b/PAUP_/Views/Account/ConfirmEmail.cshtml
@@ -1,10 +1,10 @@
 ﻿@{
-    ViewBag.Title = "Confirm Email";
+    ViewBag.Title = "Potvrdi Email adresu.";
 }
 
 <h2>@ViewBag.Title.</h2>
 <div>
     <p>
-        Thank you for confirming your email. Please @Html.ActionLink("Click here to Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
+        Hvala vam za potvrdu Email adrese. Molimo vas @Html.ActionLink("pritisnite ovdje za prijavu.", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
     </p>
 </div>
