--- a/PAUP_/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/PAUP_/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -1,13 +1,13 @@
 ﻿@{
-    ViewBag.Title = "Forgot Password Confirmation";
+    ViewBag.Title = "Zaboravljena lozinka?";
 }
 
 <hgroup class="title">
-    <h1>@ViewBag.Title.</h1>
+    <h1>@ViewBag.Title</h1>
 </hgroup>
 <div>
     <p>
-        Please check your email to reset your password.
+        Molimo provjerite svoj email kako bismo vam mogli postaviti novu lozinku.
     </p>
 </div>
 	
