--- a/PAUP_/Views/Home/Kontakt.cshtml
+++ b/PAUP_/Views/Home/Kontakt.cshtml
@@ -1,20 +1,22 @@
 ﻿
-<h3>@ViewBag.Message</h3>
+<h3><b>@ViewBag.Message</b></h3>
 
 <style>
     p{
         text-indent:5em
+        
 
     }
 
 </style>
 <address>
-    <p>Teodora Vodopija</p>
-    <p>Laura Tkalčec</p>
+    <br />
+    <p>Josip Filipić</p>
     <p>Ema Kolarić</p>
     <p>Marcel Mrazović</p>
     <p>Nikola Patafta</p>
-    <p>Josip Filipić</p>
+    <p>Laura Tkalčec</p>
+    <p>Teodora Vodopija</p>
 </address>
 
 <address>
