--- a/PAUP_/Views/Home/Onama.cshtml
+++ b/PAUP_/Views/Home/Onama.cshtml
@@ -1,20 +1,25 @@
 ﻿<style>
         h3{
-            text-align: center
+            text-align: center;
+            margin-top:17%;
+            
+
+
         }
 
         p{
             text-align:center;
            font-size: 130%;
+           margin-top:5%;
+         
             
         }
     </style>
 
-<h3>@ViewBag.Message</h3>
-
+<h3><b>@ViewBag.Message</b></h3>
 <p>
     Grupa mladih studenata Međimurskog Veleučilišta osmislila je i stvorila ovu 
-    aplikaciju koristeći se različitim metodama koje možete detaljnije proučiti
+    aplikaciju<br> kako bismo olakšali korisnicima narudžbu brze hrane,<br /> koristeći se različitim metodama koje možete detaljnije proučiti
     u projektnoj dokumentaciji.
 
 </p>
