--- a/PAUP_/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/PAUP_/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,6 +1,6 @@
 ﻿@model PAUP_.Models.ExternalLoginConfirmationViewModel
 @{
-    ViewBag.Title = "Register";
+    ViewBag.Title = "Registracija";
 }
 <h2>@ViewBag.Title.</h2>
 <h3>Associate your @ViewBag.LoginProvider account.</h3>
