--- a/PAUP_/Views/Account/ExternalLoginFailure.cshtml
+++ b/PAUP_/Views/Account/ExternalLoginFailure.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
-    ViewBag.Title = "Login Failure";
+    ViewBag.Title = "Neuspješna prijava";
 }
 
 <hgroup>
-    <h2>@ViewBag.Title.</h2>
-    <h3 class="text-danger">Unsuccessful login with service.</h3>
+    <h2>@ViewBag.Title</h2>
+    <h3 class="text-danger">Neuspješna prijava na server.</h3>
 </hgroup>
