--- a/PAUP_/Views/Account/ResetPassword.cshtml
+++ b/PAUP_/Views/Account/ResetPassword.cshtml
@@ -1,9 +1,9 @@
 ﻿@model PAUP_.Models.ResetPasswordViewModel
 @{
-    ViewBag.Title = "Reset password";
+    ViewBag.Title = "Resetiraj lozinku";
 }
 
-<h2>@ViewBag.Title.</h2>
+<h2>@ViewBag.Title</h2>
 
 @using (Html.BeginForm("ResetPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
