--- a/PAUP_/Views/Account/SendCode.cshtml
+++ b/PAUP_/Views/Account/SendCode.cshtml
@@ -1,9 +1,9 @@
 ﻿@model PAUP_.Models.SendCodeViewModel
 @{
-    ViewBag.Title = "Send";
+    ViewBag.Title = "Pošalji";
 }
 
-<h2>@ViewBag.Title.</h2>
+<h2>@ViewBag.Title</h2>
 
 @using (Html.BeginForm("SendCode", "Account", new { ReturnUrl = Model.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" })) {
     @Html.AntiForgeryToken()
