--- a/PAUP_/Views/Account/VerifyCode.cshtml
+++ b/PAUP_/Views/Account/VerifyCode.cshtml
@@ -1,6 +1,6 @@
 ﻿@model PAUP_.Models.VerifyCodeViewModel
 @{
-    ViewBag.Title = "Verify";
+    ViewBag.Title =  "Potvrdi";
 }
 
 <h2>@ViewBag.Title.</h2>
